--- a/package.json
+++ b/package.json
@@ -4,15 +4,41 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.9.1",
+    "@react-navigation/native": "^7.1.27",
+    "@react-navigation/native-stack": "^7.9.1",
+    "babel-preset-expo": "^54.0.9",
     "expo": "~54.0.31",
+    "expo-av": "^16.0.8",
+    "expo-blur": "~15.0.8",
+    "expo-haptics": "^15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-linear-gradient": "^15.0.8",
+    "expo-notifications": "^0.32.16",
+    "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "uuid": "^13.0.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@babel/preset-env": "^7.28.6",
+    "babel-jest": "^30.2.0",
+    "jest": "~29.7.0"
+  }
 }
