--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "ios:dev": "cd ios && pod install && cd .. && expo run:ios",
     "web": "expo start --web",
     "test": "jest",
     "test:watch": "jest --watch"
@@ -33,6 +34,7 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-worklets": "0.5.1",
     "uuid": "^13.0.0"
   },
   "private": true,
