--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,10 @@ yarn-error.*
 # typescript
 *.tsbuildinfo
 
-# generated native folders
-/ios
-/android
+# generated native build artifacts
+/ios/Pods
+/ios/build
+/ios/DerivedData
+/android/.gradle
+/android/app/build
+/android/build
